k8s/prod/1.7/ab/flask-admin-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-admin-dr
  namespace: ms-prod
spec:
  host: flask-admin
  subsets:
  - name: prod
    labels:
      version: "1.6"
  - name: canary
    labels:
      version: "1.7"
